newtask component-TestCases

--- a/src/app/tasks-list/newtask/newtask.component.html
+++ b/src/app/tasks-list/newtask/newtask.component.html
@@ -2,7 +2,7 @@
   <ion-input  placeholder="   Add Task" #taskInput>
         <ion-icon name="add"></ion-icon>
   </ion-input>
-  <ion-button (click)="enterTask(taskInput)" data-placement="left" data-toggle="tooltip" title="Add task">
+  <ion-button class="newTask" (click)="enterTask(taskInput)" data-placement="left" data-toggle="tooltip" title="Add task">
     Add 
   </ion-button>
 </ion-item>
