--- a/src/app/tasks-list/tasks-list.page.html
+++ b/src/app/tasks-list/tasks-list.page.html
@@ -18,5 +18,5 @@
       </ion-label>
     </ion-item>
   </ion-menu-toggle>
-  <app-newtask (outEnterTask)="addTask($event)"></app-newtask>
+  <app-newtask (outTaskTitle)="addTask($event)"></app-newtask>
 </ion-content>
