refactored the calendar

--- a/src/app/details/calendar/calendar.component.html
+++ b/src/app/details/calendar/calendar.component.html
@@ -1,4 +1,3 @@
-<ion-calendar [(ngModel)]="myDate" [format]="'DD/MM/YYYY'"></ion-calendar>
+<ion-calendar [(ngModel)]="myDate"(click)="date(myDate)" [format]="'DD/MM/YYYY'"></ion-calendar>
 <div style="display: flex; justify-content: center;">
-  <ion-button (click)="date(myDate)">save</ion-button>
 </div>
