--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,4 +1,4 @@
-<!-- <ion-header>
+ <ion-header>
   <ion-toolbar>
     <ion-title>details</ion-title>
   </ion-toolbar>
@@ -31,4 +31,4 @@
 
   <app-calendar *ngIf=show (outDate)="updateDate($event)"></app-calendar>
 
-</ion-content> -->
+</ion-content>
