--- a/src/app/tasks-list/tasks-list.page.html
+++ b/src/app/tasks-list/tasks-list.page.html
@@ -3,7 +3,6 @@
     <ion-title>Tasks</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
   <ion-menu-toggle auto-hide="false" *ngFor="let task of tasks;let i=index">
     <ion-item>
@@ -11,7 +10,7 @@
         title="Mark as unimportant"></ion-icon>
       <ion-icon slot="end" name="star-outline" *ngIf=!task.important (click)="important(task)" data-placement="left" data-toggle="tooltip"
         title="mark as important"></ion-icon>
-      <ion-icon slot="end" name="create" class="details" (click)="taskDetails(task)" data-placement="left" data-toggle="tooltip" title="view details"></ion-icon>
+      <ion-icon slot="end" name="create" class="update" (click)="taskDetails(task)" data-placement="left" data-toggle="tooltip" title="view details"></ion-icon>
       <ion-icon slot="end" name="trash" class="delete" (click)="deleteTask(task.id)" data-placement="left" data-toggle="tooltip" title="delete task"></ion-icon>
       <ion-label>
         {{task.title}}
