failing test cases

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,1 +1,1 @@
-<ion-calendar [(ngModel)]="myDate" (click)="date(myDate)" [format]="'DD/MM/YYYY'"></ion-calendar>
+<ion-calendar [(ngModel)]="myDate" (click)="selectedDate(myDate)" [format]="'DD/MM/YYYY'"></ion-calendar>
