--- a/src/app/tasks-list/newtask/newtask.component.html
+++ b/src/app/tasks-list/newtask/newtask.component.html
@@ -1,6 +1,6 @@
 <ion-item>
   <ion-input placeholder="Add Task" #taskInput>
-    <ion-icon name="add"></ion-icon>
+    <ion-icon slot="start" name="add"></ion-icon>
   </ion-input>
   <ion-button class="newTask" (click)="enterTaskTitle(taskInput)" data-placement="left" data-toggle="tooltip" title="Add task">
     Add
