--- a/src/app/tasks-list/tasks-list.page.html
+++ b/src/app/tasks-list/tasks-list.page.html
@@ -7,9 +7,9 @@
 <ion-content>
   <ion-menu-toggle auto-hide="false" *ngFor="let task of tasks;let i=index">
     <ion-item>
-      <ion-icon slot="end" name="star" *ngIf=task.important (click)="unImportant(task)" data-placement="left" data-toggle="tooltip"
+      <ion-icon slot="end" name="star" class="important" *ngIf=task.important (click)="unImportant(task)" data-placement="left" data-toggle="tooltip"
         title="Mark as unimportant"></ion-icon>
-      <ion-icon slot="end" name="star-outline" *ngIf=!task.important (click)="important(task)" data-placement="left" data-toggle="tooltip"
+      <ion-icon slot="end" name="star-outline" class="unimportant" *ngIf=!task.important (click)="important(task)" data-placement="left" data-toggle="tooltip"
         title="mark as important"></ion-icon>
       <ion-icon slot="end" name="create" class="details" (click)="taskDetails(task)" data-placement="left" data-toggle="tooltip" title="view details"></ion-icon>
       <ion-icon slot="end" name="trash" class="delete" (click)="deleteTask(task.id)" data-placement="left" data-toggle="tooltip" title="delete task"></ion-icon>
